--- a/assets/package.json
+++ b/assets/package.json
@@ -3,7 +3,8 @@
   "license": "MIT",
   "scripts": {
     "deploy": "webpack --mode production",
-    "watch": "webpack --mode development --watch"
+    "watch": "webpack --mode development --watch",
+    "test": "mocha -r @babel/register -r jsdom-global/register test/**/*.spec.js"
   },
   "dependencies": {
     "phoenix": "file:../deps/phoenix",
@@ -11,11 +12,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/register": "^7.9.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.0",
+    "babel-register": "^6.26.0",
+    "chai": "^4.2.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
+    "jsdom": "16.2.2",
+    "jsdom-global": "3.0.2",
     "mini-css-extract-plugin": "^0.9.0",
+    "mocha": "^7.1.2",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "terser-webpack-plugin": "^2.3.2",
     "webpack": "4.41.5",
